Fixing spacing for mobile

--- a/Shared/MainLayout.razor.css
+++ b/Shared/MainLayout.razor.css
@@ -17,10 +17,11 @@
     margin-bottom: 10px;
     margin-right: 10px;
     min-width: 52ex;
+    padding-left: 15px;
+    padding-top: 5px;
 }
 
 .main {
-    flex: 1;
     overflow-y: auto;
 }
 
@@ -75,22 +76,42 @@
         margin-left: 0;
     }
     .page {
-        padding: 5px;
+        padding: 0px;
+        height: 100%;
     }
     .sidebar {
-        height: 25.5vh;
+        position: absolute;
+        min-height: 20vh;
+        max-height: 20vh;
+        top: 0;
     }
     .mainPanel {
         margin-bottom: 5px;
+        width: 100%;
+        box-shadow: 0;
     }
     .main {
-        height: 45vh;
+        bottom: 205px;
+        top: 0;
+        position: absolute;
     }
     .stats {
-        height: 13.5vh
+        min-height: 105px;
+        max-height: 105px;
+        bottom: 100px;
+        position: absolute;
     }
     .history {
-        height: 13vh;
+        min-height: 100px;
+        max-height: 100px;
+        bottom: 0;
+        position: absolute;
+    }
+    .verticalGroup {
+        position: absolute;
+        top: 20vh;
+        bottom: 0;
+        width: 100%;
     }
 }
 
@@ -180,11 +201,9 @@ DiceBox {
 }
 
 div#diceSquare {
-    width: 75px;
-    height: 75px;
+    width: 65px;
+    height: 65px;
     display: inline-block;
-    margin-right: 10px;
-    margin-top: 10px;
     position: relative;
 }
 
@@ -204,8 +223,8 @@ div#outline {
 }
 
 img#dieDots {
-    width: 75px;
-    height: 75px;
+    width: 100%;
+    height: 100%;
     border-radius: 15px;
     border-style: solid;
     border-width: 2px;
@@ -214,8 +233,8 @@ img#dieDots {
 }
 
 input#smallDie {
-    width: 75px;
-    height: 75px;
+    width: 100%;
+    height: 100%;
     position: absolute;
 }
 
@@ -292,10 +311,10 @@ button#roll {
 }
 
 h1#dieText {
+    width: 98%;
+    height: 100%;
     text-align: center;
-    padding-top: 24px;
-    width: 75px;
-    height: 75px;
+    padding-top: 18px;
     font-size: x-large;
     position: absolute;
 }
@@ -305,15 +324,14 @@ h1#explanation {
 }
 
 div#historyBox {
-    margin: 5px;
-    border-radius: 8px;
+    margin-right: 5px;
+    border-radius: 5px;
     background-color: #85a9c7;
-    width: 75px;
-    height: 75px;
+    width: 60px;
+    height: 60px;
     display: inline-block;
     font-size: xx-large;
     text-align: center;
-    margin-left: 10px;
     position: relative;
 }
 
@@ -350,8 +368,6 @@ div#sumBoxText {
 }
 
 h4#title {
-    margin: 15px;
-    margin-top: 10px;
     margin-bottom: 0px;
     font-size: 1.2rem;
 }
